# parallel-llm

./: README.md  infer_example.py  pyproject.toml  setup.py  train_example.py
Desktop/NITSRI PHD/ParallelLLM/: .gitignore  LIBRARY_SUMMARY.json
Desktop/NITSRI PHD/ParallelLLM/examples/: parallel-llm-testing.ipynb
