[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-llm"
version = "0.1.0"
description = "Ultra-fast parallel training and inference for language models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["parallel_llm/tests"]
python_files = "test_*.py"
